Скорректированы все классы